added recipe and ingredient models, stylings and place for data, needs func and input/output

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,36 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Cookr</title>
-  <base href="/">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <!-- Facebook meta for sharing -->
+    <meta property="og:url" content="https://" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="" />
+    <meta property="og:description" content="" />
+    <meta property="og:image" content="https://" />
+    <meta property="og:image:url" content="" />
+    <meta property="og:image:secure_url" content="https://" />
+    <meta property="og:image:width" content="622" />
+    <meta property="og:image:height" content="625" />
+    <meta property="og:image:alt" content=" Icon" />
+    <title>CookR</title>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <!-- Stylesheets -->
+
+    <!-- JS -->
+
+    <!-- Favicon, multi-size -->
+    <link rel="icon" type="image/x-icon" sizes="16x16 32x32" href="./assets/img/favicon.ico">
 </head>
-<body>
-  <app-root></app-root>
+<body id="body">
+    <app-root>
+        <div class="ui container">
+          <div class="ui active dimmer">
+            <div class="ui text massive loader">Loading</div>
+          </div>
+        </div>
+    </app-root>
 </body>
 </html>
