--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
     <meta property="og:image:width" content="622" />
     <meta property="og:image:height" content="625" />
     <meta property="og:image:alt" content=" Icon" />
+    <base href="/">
     <title>CookR</title>
 
     <!-- Stylesheets -->
